# peak-finder-app

./: .codespellignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .rstcheck.cfg  Install_or_Update.bat  README-dev.rst  README.rst  conda-py-3.10-lock.yml  conda-py-3.9-lock.yml  deps-lock-config.yaml  install.bat  install_editable.bat  install_editable_in_analyst.bat  install_for_analyst.bat  install_in_analyst.bat  install_in_mirageo.bat  meta.yaml  package.rst  py-3.10.conda-lock.yml  py-3.11.conda-lock.yml  py-3.12.conda-lock.yml  pylintrc  pyproject.toml  recipe.yaml
.github/workflows/: create_env_file.yml  issue_to_jira.yml  pytest-unix-os.yaml  pytest-unix-os.yml  pytest-windows.yaml  pytest-windows.yml  python_analysis.yml  python_deploy_dev.yml  python_deploy_prod.yml  static-analysis.yml
assets/: __init__.py
assets/uijson/: peak_finder.ui.json
devtools/: add_url_tag_sha256.py  check-copyright.py  create_application_env_files.py  git_message_hook.py  rename_my_app.py  run_conda_lock.py
docs/: environnment.yml
docs/source/: api.rst  conf.py  getting_started.rst  getting_started2.rst  index.rst  interactive_application.rst  introduction.rst  methodology.rst  parameters.rst  standalone_application.rst  usage.rst
environments/: conda-py-3.10-linux-64-dev.lock.yml  conda-py-3.10-linux-64.lock.yml  conda-py-3.10-osx-64-dev.lock.yml  conda-py-3.10-osx-64.lock.yml  conda-py-3.10-win-64-dev.lock.yml  conda-py-3.10-win-64.lock.yml  conda-py-3.9-linux-64-dev.lock.yml  conda-py-3.9-linux-64.lock.yml  conda-py-3.9-osx-64-dev.lock.yml  conda-py-3.9-osx-64.lock.yml  conda-py-3.9-win-64-dev.lock.yml  conda-py-3.9-win-64.lock.yml  py-3.10-linux-64-dev-no_ui.conda.lock.yml  py-3.10-linux-64-dev.conda.lock.yml  py-3.10-linux-64-no_ui.conda.lock.yml  py-3.10-linux-64.conda.lock.yml  py-3.10-win-64-dev-no_ui.conda.lock.yml  py-3.10-win-64-dev.conda.lock.yml  py-3.10-win-64-no_ui.conda.lock.yml  py-3.10-win-64.conda.lock.yml  py-3.11-linux-64-dev-no_ui.conda.lock.yml  py-3.11-linux-64-dev.conda.lock.yml  py-3.11-linux-64-no_ui.conda.lock.yml  py-3.11-linux-64.conda.lock.yml  py-3.11-win-64-dev-no_ui.conda.lock.yml  py-3.11-win-64-dev.conda.lock.yml  py-3.11-win-64-no_ui.conda.lock.yml  py-3.11-win-64.conda.lock.yml  py-3.12-linux-64-dev-no_ui.conda.lock.yml  py-3.12-linux-64-dev.conda.lock.yml  py-3.12-linux-64-no_ui.conda.lock.yml  py-3.12-linux-64.conda.lock.yml  py-3.12-win-64-dev-no_ui.conda.lock.yml  py-3.12-win-64-dev.conda.lock.yml  py-3.12-win-64-no_ui.conda.lock.yml  py-3.12-win-64.conda.lock.yml
peak_finder/: __init__.py  anomaly.py  anomaly_group.py  application.py  constants.py  dash_application.py  driver.py  layout.py  line_anomaly.py  line_data.py  line_group.py  line_position.py  notebook.ipynb  params.py  utils.py
peak_finder-assets/: FlinFlon_tem_aoi.geoh5  __init__.py
peak_finder-assets/uijson/: peak_finder.ui.json  test.geoh5
peak_finder/base/: __init__.py  application.py  driver.py  geophysical_systems.py  list.py  params.py  selection.py  surveys.py  utils.py  workspace.py  write_default_uijson.py
peak_finder_assets/uijson/: peak_finder.ui.json
tests/: __init__.py  assets_path_test.py  conftest.py  peak_finder_test.py  utils_test.py  version_test.py  write_default_uijson_test.py
