[tool.poetry]
name = "peak_finder"
version = "0.1.0"
authors = ["Mira Geoscience <support@mirageoscience.com>"]
description = "Peak Finder App"
repository = "https://github.com/MiraGeoscience/peak-finder-app"
homepage = "https://mirageoscience.com"

[tool.poetry.dependencies]
python = "^3.9, < 3.11"

## dependencies for a minimal environment
geoh5py = {version = "~0.8.0rc1", source = "pypi", allow-prereleases = true}
#geoapps-utils = {version = "~0.1.0", source = "pypi"}
geoapps-utils = { url = "https://github.com/MiraGeoscience/geoapps-utils/archive/refs/heads/develop.zip#sha256=" }

notebook = {version = "~6.5.3"}
dask = {version = "2022.10.0", extras = ["distributed"]}
jupyter-server = {version = "~1.23.6"}
scipy = {version = "~1.10.1"}
tqdm = {version = "^4.64.0"}
dash-daq = {version = "~0.5.0"}

## about pip dependencies
# to be specified to work with conda-lock
# - from PyPI: my_package = { version = "1.2.3", source = "pypi" }
# - from URL:
#   - for a tags: my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/tags/VERSION_TAG.zip#sha256=" }
#   - for a branch: my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/heads/BRANCH.zip#sha256=" }
# Note - conda-lock does not support the syntax: my_package = { git = ... }
#        while poetry2conda supports only { git = "...", tag = "..." }, and not { url = ... }


[tool.poetry.group.dev.dependencies]
pylint = "*"
pytest = "*"
pytest-cov = "*"
toml = "*" # for tests only

[tool.conda-lock]
platforms = ['win-64', 'osx-64', 'linux-64']
channels = ['conda-forge']

[tool.conda-lock.dependencies]
libblas = "*=*mkl"

[tool.isort]
# settings for compatibility between ``isort`` and ``black`` formatting
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
# defaults are just fine

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
