[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core>=1.0.0', 'setuptools']

[tool]
[tool.conda-lock]
channels = ['conda-forge']
platforms = ['win-64', 'linux-64']

[tool.conda-lock.dependencies]
h5py = '>=3.2.1, <4.0.0'
pillow = '>=10.3.0, <10.4.0'
pydantic = '>=2.5.2, <3.0.0'
scikit-image = '>=0.20.0, <0.21.0'

[tool.conda-lock.dependencies.pyside2]
optional = true
version = '5.15.*'

[tool.coverage]
[tool.coverage.html]
skip_covered = true
skip_empty = true

[tool.coverage.report]
exclude_lines = ['raise NotImplementedError', 'pass', 'if TYPE_CHECKING', 'pragma: no cover']
fail_under = 75

[tool.coverage.run]
branch = true
source = ['peak_finder']

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
plugins = []
scripts_are_modules = true
show_column_numbers = true
show_error_context = true
warn_unused_configs = true

[tool.poetry]
authors = ['Mira Geoscience <support@mirageoscience.com>']
classifiers = ['Development Status :: 3 - Alpha', 'Intended Audience :: Science/Research', 'Programming Language :: Python', 'Topic :: Scientific/Engineering', 'Topic :: Scientific/Engineering :: Mathematics', 'Topic :: Scientific/Engineering :: Physics', 'Operating System :: Microsoft :: Windows', 'Operating System :: POSIX', 'Operating System :: Unix', 'Natural Language :: English']
description = 'Peak Finder App'
documentation = 'https://mirageoscience-peak-finder-app.readthedocs-hosted.com/'
homepage = 'https://www.mirageoscience.com/mining-industry-software/python-integration/'
license = 'MIT'
maintainers = ['Dominique Fournier <dominiquef@mirageoscience.com>']
name = 'peak-finder-app'
readme = 'README.rst'
repository = 'https://github.com/MiraGeoscience/peak-finder-app'
version = '0.2.0-alpha.1'

[tool.poetry.dependencies]
distributed = '2024.6.*'
numpy = '~1.26.0'
plotly = '~5.19.0'
python = '^3.10, <3.11'
scipy = '~1.14.0'
tqdm = '^4.66.1'

[tool.poetry.dependencies.curve-apps]
allow-prereleases = true
version = '>=0.2.0-alpha0.dev0, <=0.3.0'

[tool.poetry.dependencies.dash]
optional = true
version = '^2.12'

[tool.poetry.dependencies.dash-daq]
optional = true
version = '~0.5.0'

[tool.poetry.dependencies.dask]
extras = ['distributed']
version = '2024.6.*'

[tool.poetry.dependencies.flask]
optional = true
version = '^3.0.3'

[tool.poetry.dependencies.geoapps-utils]
allow-prereleases = true
version = '>=0.4.0-alpha0.dev0, <0.5.0'

[tool.poetry.dependencies.geoh5py]
allow-prereleases = true
version = '>=0.10.0-alpha0.dev0, <0.11.0'

[tool.poetry.dependencies.pyqt5-qt5]
optional = true
version = '5.15.2'

[tool.poetry.dependencies.pyqtwebengine]
optional = true
version = '~5.15.2, <5.15.7'

[tool.poetry.dependencies.pyqtwebengine-qt5]
optional = true
version = '5.15.2'

[tool.poetry.dependencies.pyside2]
optional = true
version = '~5.15.2.1'

[tool.poetry.extras]
dash = ['dash', 'dash-daq', 'flask', 'pyqt5-qt5', 'pyqtwebengine', 'pyqtwebengine-qt5', 'pyside2']

[tool.poetry.group]
[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
pygments = '*'
pylint = '*'
pytest = '*'
pytest-cov = '*'
readthedocs-sphinx-ext = '*'
sphinx = '^5.0'
tomli = '*'

[[tool.poetry.include]]
format = ['sdist', 'wheel']
path = 'COPYING'

[[tool.poetry.include]]
format = ['sdist', 'wheel']
path = 'COPYING.LESSER'

[[tool.poetry.include]]
format = ['sdist', 'wheel']
path = 'LICENSE'

[[tool.poetry.include]]
format = ['sdist', 'wheel']
path = 'README.rst'

[[tool.poetry.include]]
format = ['sdist', 'wheel']
path = 'THIRD_PARTY_SOFTWARE.rst'

[[tool.poetry.include]]
format = ['sdist', 'wheel']
path = 'docs/**/THIRD_PARTY_SOFTWARE.rst'

[[tool.poetry.packages]]
include = 'peak_finder'

[[tool.poetry.packages]]
include = 'peak_finder-assets'

[[tool.poetry.source]]
name = 'jfrog-server'
url = 'https://mirageoscienceltd.jfrog.io/artifactory/api/pypi/public-pypi-dev/simple'

[tool.ruff]
target-version = 'py310'

[tool.ruff.lint]
ignore = ['B028', 'E501', 'F401', 'RUF015', 'RUF005', 'B007', 'A001']
select = ['A', 'B', 'B006', 'B9', 'BLE', 'C4', 'C9', 'E', 'F', 'I', 'RUF', 'TID', 'UP', 'W']

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 18
